@@ -1,0 +1,5 @@
+class AddVisibleFilenameToAttachments < ActiveRecord::Migration
+  def change
+    add_column :attachments, :visible_filename, :string
+  end
+end
